--- a/delta_hedging_simulator.ipynb
+++ b/delta_hedging_simulator.ipynb
@@ -5,7 +5,7 @@
    "id": "dcabc8f3",
    "metadata": {},
    "source": [
-    "# Simulateur de Delta Hedging 🧮📈\n",
+    "# Simulateur de Delta Hedging ",
     "\n",
     "Ce notebook simule la couverture dynamique d'un call européen via delta-hedging.  \n",
     "L’objectif est de mesurer le **PnL final** d’un portefeuille delta-hedgé rebalancé chaque jour jusqu’à maturité.\n"
